@@ -5,8 +5,10 @@ All notable changes to this project will be documented in this file.
 [1.0.1] - 21/11/2023
 Added
     trip-service MAJOR Init main.go
-    user-model PATCH Add models to define structure of the data
-
+    trip-models PATCH Add Trip and Reservation structure models
+    user-models PATCH Add Passenger and CarOwner structure models
+    user-handlers PATCH Add handlers to respond HTTP requesst, interacting with the database
+    
 Changed
 
 Fixed
